# hdb

./: .gitignore  Makefile  README.md  configure.in  lua-info.py
lib/: lcurses-0.1-devel
lib/lcurses-0.1/: Makefile  _Makefile  curses.lua  interp.lua  lc.h  lcurses.c  lpanel.c  requirelib.lua  test.lua
src/: Makefile  const.h  hsh.h  main.c  options.h  shell.c  shell.h
src/asm/: asm.h
src/sh/: shell.c  shell.h
src/ui/: Makefile  term.c  term.h
